# string-calc

./: .gitignore  .variables  CMakeLists.txt  Makefile  build.sh  calc  calc.c  defs.h  file_ops.c  file_ops.h  main.c
cmake/modules/: FindGMP.cmake  FindMPFR.cmake
src/: calc.c  calc.h  defs.h  file_ops.c  lexer.c  lexer.h  main.c  stack.c  stack.h  structs.h
